--- a/prezentacja.html
+++ b/prezentacja.html
@@ -27,19 +27,10 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="3" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
-<h2 id="czego-nie-b%C4%99dzie">Czego nie będzie</h2>
-<ul>
-<li>Instalacji i wstępnej konfiguracji OCS</li>
-<li>SNMP</li>
-<li>Powiadamiania</li>
-<li>Deploymentu</li>
-</ul>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="4" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="inwentaryzacja">Inwentaryzacja</h1>
 <h2 id="komu-to-potrzebne">Komu to potrzebne?</h2>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="5" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="4" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---zalety">OCS - Zalety</h1>
 <ul>
 <li>Automatyczna inwentaryzacja</li>
@@ -49,7 +40,7 @@
 <li>Skalowalność</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="6" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="5" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---wady">OCS - Wady</h1>
 <ul>
 <li>Wymaga instalacji agentów</li>
@@ -58,7 +49,7 @@
 <li>Trzeba się trochę narobić przy konfiguracji</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="7" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="6" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---serwer">OCS - Serwer</h1>
 <p>(do 10 000 urządzeń)</p>
 <ul>
@@ -67,7 +58,7 @@
 <li>Dysk: Minimum 200 GB</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="8" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="7" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---server">OCS - Server</h1>
 <ul>
 <li>MySQL lub MariaDB</li>
@@ -81,7 +72,7 @@
 <li>Perl</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="9" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="8" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---agenty">OCS - Agenty</h1>
 <ul>
 <li>Windows Agent 2.10.1.0</li>
@@ -91,8 +82,17 @@
 <li>Android Agent 2.7</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="10" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="9" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="ocs---demo">OCS - Demo</h1>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="10" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
+<h2 id="czego-nie-by%C5%82o">Czego nie było</h2>
+<ul>
+<li>Instalacji i wstępnej konfiguracji OCS</li>
+<li>SNMP</li>
+<li>Powiadamiania</li>
+<li>Deploymentu</li>
+</ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-class="lead invert" data-paginate="true" data-theme="gaia" lang="pl-PL" class="lead invert" data-marpit-pagination="11" style="--class:lead invert;--paginate:true;--theme:gaia;" data-marpit-pagination-total="11">
 <h1 id="dzi%C4%99kuj%C4%99-bardzo">Dziękuję bardzo</h1>
